add .env in gitignore