@@ -4,25 +4,23 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class OrderLineService {
 
     private final OrderLineRepository repository;
-
     private final OrderLineMapper mapper;
 
-    public Integer saveOrderLine(OrderLineRequest request) {
-        var order = mapper.toOrderLine(request);
-        return repository.save(order).getId();
+    public Long saveOrderLine(OrderLineRequest request) {
+        var orderLine = mapper.toOrderLine(request);
+        return repository.save(orderLine).getId();
     }
 
-    public List<OrderLineResponse> findAllByOrderId(Integer orderId) {
+    public List<OrderLineResponse> findAllByOrderId(Long orderId) {
         return repository.findAllByOrderId(orderId)
                 .stream()
                 .map(mapper::toOrderLineResponse)
-                .collect(Collectors.toList());
+                .toList(); // Cleaner with Java 16+
     }
 }
