@@ -4,73 +4,72 @@ import com.rishav.ecommerce.exception.ProductPurchaseException;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ProductService {
 
     private final ProductRepository repository;
-
     private final ProductMapper mapper;
 
-    public Integer createProduct(ProductRequest request){
+    public Long createProduct(ProductRequest request) {
         var product = mapper.toProduct(request);
         return repository.save(product).getId();
     }
 
-    public List<ProductPurchaseResponse> purchaseProducts(List<ProductPurchaseRequest> request){
-        //extracting the ids of all the product from mapping
-        var productIds = request  //user wants 1,2,3 products
-                .stream()
+    @Transactional
+    public List<ProductPurchaseResponse> purchaseProducts(List<ProductPurchaseRequest> request) {
+        var productIds = request.stream()
                 .map(ProductPurchaseRequest::productId)
                 .toList();
 
-        //we've to perform some check whether product is available or not
-        var storedProducts = repository.findAllByIdInOrderById(productIds); //1,2 available
-        if(productIds.size() != storedProducts.size()){
-            throw new ProductPurchaseException("One or more products does not exits");
+        // Fetch products in order with their categories if needed
+        var storedProducts = repository.findAllByIdInOrderById(productIds);
+
+        if (productIds.size() != storedProducts.size()) {
+            throw new ProductPurchaseException("One or more products do not exist");
         }
 
-        var storedRequest = request
-                .stream()
+        var storedRequest = request.stream()
                 .sorted(Comparator.comparing(ProductPurchaseRequest::productId))
                 .toList();
 
         var purchasedProducts = new ArrayList<ProductPurchaseResponse>();
 
-        for(int i = 0; i < storedProducts.size(); i++){
+        for (int i = 0; i < storedProducts.size(); i++) {
             var product = storedProducts.get(i);
             var productRequest = storedRequest.get(i);
 
-            if(product.getAvailableQuantity() < productRequest.quantity()){
-                throw new ProductPurchaseException("Insufficient stock quantity for product with ID:: " + productRequest.productId());
+            if (product.getAvailableQuantity() < productRequest.quantity()) {
+                throw new ProductPurchaseException(
+                        "Insufficient stock quantity for product with ID:: " + productRequest.productId());
             }
 
-            var newAvailableQuantity = product.getAvailableQuantity() - productRequest.quantity();
-            product.setAvailableQuantity(newAvailableQuantity);
-            repository.save(product);
+            product.setAvailableQuantity(product.getAvailableQuantity() - productRequest.quantity());
             purchasedProducts.add(mapper.toProductPurchaseResponse(product, productRequest.quantity()));
         }
+
+        // Batch update to reduce queries
+        repository.saveAll(storedProducts);
+
         return purchasedProducts;
     }
 
-    public ProductResponse findById(Integer productId) {
-        return repository.findById(productId)
+    public ProductResponse findById(Long productId) {
+        return repository.findByIdWithCategory(productId) // Use JOIN FETCH query
                 .map(mapper::toProductResponse)
                 .orElseThrow(() -> new EntityNotFoundException("Product not found with ID:: " + productId));
     }
 
     public List<ProductResponse> findAll() {
-        return repository.findAll()
+        return repository.findAllWithCategory() // Use JOIN FETCH query
                 .stream()
                 .map(mapper::toProductResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-
 }
